# AB_FINAL_UNIT20

./: CMakeLists.txt  Hospital.db  README.md  citas.csv  h origin main  main.cpp  pacientes.csv
include/: CSVcontrol.hpp  Cita.hpp  Database.hpp  Medico.hpp  Paciente.hpp  Reporte.hpp  main.hpp
recursos/: hospital_schema.sql
src/: CSVcontrol.cpp  Cita.cpp  Database.cpp  Medico.cpp  Paciente.cpp  Reporte.cpp  citas.csv  main.cpp  pacientes.csv
src/output/: pacientes.csv
